CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_INFO__c.object
<CustomObject>
    <description>Information codes about individual</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>Parent_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Legacy Individual Citizenship Information</description>
        <label>Legacy Individual Citizenship Info</label>
        <referenceTo>T_SBSD_INDIV_INFO__c</referenceTo>
        <relationshipLabel>Individual_Information</relationshipLabel>
        <relationshipName>Individual_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_INFO_INDIV__c</fullName>
        <description>Type of Individual Information</description>
        <label>Individual Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00366</valueSetName>
        </valueSet>
    </fields> 
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Individual_Information</relationshipLabel>
        <relationshipName>Individual_Information</relationshipName>
        <type>Lookup</type>
    </fields>    
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <formula>IDN_CASE__r.CDE_COUNTY__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_VALUE_INFO_INDIV__c</fullName>
        <label>Individual Information Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDE_TYPE_INFO_INDIV__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>R00847</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Individual Information (Individual)</relationshipLabel>
        <relationshipName>Individual_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Individual Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Individual Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Eff_End_Dt_cannot_be_less_Eff_Begin_Dt</fullName>
        <active>true</active>
        <description>Effective End Date cannot be before the Effective Begin Date</description>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_END_EFFV__c &lt; DTE_BEGIN_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Cannot be before the Effective Begin Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Begin_Date_if_Type_is_Head_St_Foster</fullName>
        <active>true</active>
        <description>Required when CDE_TYPE_INFO_INDIV is Foster or Head Start. CHAT-1169</description>
        <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c), ISBLANK( DTE_BEGIN_EFFV__c) ,  OR(ISPICKVAL(CDE_TYPE_INFO_INDIV__c , &apos;HDS&apos;), ISPICKVAL(CDE_TYPE_INFO_INDIV__c , &apos;FST&apos;)))</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Please enter Effective Begin Date when Type of Individual Information is Foster or Head Start</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Id_mandatory_for_Citisenship_type</fullName>
        <active>true</active>
        <description>Required when CDE_TYPE_INFO_INDIV is Citizenship status. CCCAP-9945</description>
        <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c), ISBLANK(IDN_CASE__c) , ISPICKVAL(CDE_TYPE_INFO_INDIV__c , &apos;CS&apos;))</errorConditionFormula>
        <errorDisplayField>IDN_CASE__c</errorDisplayField>
        <errorMessage>Please enter Case ID when Type of Individual Information is Citizenship Status</errorMessage>
    </validationRules>
</CustomObject>