CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_INFO__c/validationRules/Req_Begin_Date_if_Type_is_Head_St_Foster.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Begin_Date_if_Type_is_Head_St_Foster</fullName>
    <active>true</active>
    <description>Required when CDE_TYPE_INFO_INDIV is Foster or Head Start. CHAT-1169</description>
    <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c), ISBLANK( DTE_BEGIN_EFFV__c) ,  OR(ISPICKVAL(CDE_TYPE_INFO_INDIV__c , &apos;HDS&apos;), ISPICKVAL(CDE_TYPE_INFO_INDIV__c , &apos;FST&apos;)))</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Please enter Effective Begin Date when Type of Individual Information is Foster or Head Start</errorMessage>
</ValidationRule>